intTests/test_parse_errors/lexer006.log.good
Loading file "lexer006.saw"
lexer006.saw:3:1-3:2: Error: Syntax error: missing ';'
FAILED
