intTests/test_parse_errors/lexer006.saw
// This fails with a missing ; after the comment is processed.
let x = 3 // {{
}} *
+ 5;



